--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
           <a class="navbarItem" href="#about">Acerca</a>
           <a class="navbarItem" href="#proyectos">Proyectos</a>
           <a class="navbarItem" href="#contact">Contacto</a>
-          <button class="navbarBtn navbarItem">Resume</button>
+          <a target="_blank" href="https://tan-randi-23.tiiny.site"
+            ><button class="navbarBtn navbarItem">Resume</button>
+          </a>
         </div>
 
         <button class="navbarDropdownBtn navbarItem">
@@ -43,7 +45,9 @@
           <a class="navbarItem" href="#about">Acerca</a>
           <a class="navbarItem" href="#proyectos">Proyectos</a>
           <a class="navbarItem" href="#contact">Contacto</a>
-          <button class="navbarBtn navbarItem">Resume</button>
+          <a target="_blank" href="https://tan-randi-23.tiiny.site"
+            ><button class="navbarBtn navbarItem">Resume</button>
+          </a>
         </div>
       </div>
     </nav>
