--- a/index.html
+++ b/index.html
@@ -302,20 +302,16 @@
               </h4>
               <ul class="techUsedContainer">
                 <li class="skillItem">
-                  <i class="fa-brands fa-unity" style="color: #ffffff"></i>
-                  <p>Unity</p>
+                  <i class="fa-brands fa-html5" style="color: #ffffff"></i>
+                  <p>HTML</p>
                 </li>
                 <li class="skillItem">
-                  <i class="fa-solid fa-code" style="color: #ffffff"></i>
-                  <p>C#</p>
+                  <i class="fa-brands fa-css3-alt" style="color: #ffffff"></i>
+                  <p>CSS</p>
                 </li>
                 <li class="skillItem">
-                  <i class="fa-solid fa-code" style="color: #ffffff"></i>
-                  <p>Visual Studio</p>
-                </li>
-                <li class="skillItem">
-                  <i class="fa-brands fa-github" style="color: #ffffff"></i>
-                  <p>Git Hub</p>
+                  <i class="fa-brands fa-square-js" style="color: #ffffff"></i>
+                  <p>Java Script</p>
                 </li>
               </ul>
             </div>
