--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a class="navbarItem" href="#proyectos">Proyectos</a>
           <a class="navbarItem" href="#contact">Contacto</a>
           <a target="_blank" href="https://tan-randi-23.tiiny.site"
-            ><button class="navbarBtn navbarItem">Resume</button>
+            ><button class="navbarBtn navbarItem">CV</button>
           </a>
         </div>
 
@@ -46,7 +46,7 @@
           <a class="navbarItem" href="#proyectos">Proyectos</a>
           <a class="navbarItem" href="#contact">Contacto</a>
           <a target="_blank" href="https://tan-randi-23.tiiny.site"
-            ><button class="navbarBtn navbarItem">Resume</button>
+            ><button class="navbarBtn navbarItem">CV</button>
           </a>
         </div>
       </div>
