--- a/index.html
+++ b/index.html
@@ -193,7 +193,19 @@
                 </li>
               </ul>
             </div>
-            <img src="img/alpha02.png" alt="Alpha 02 imagen" />
+            <div class="proyectoImageHolder">
+              <img src="img/alpha02.png" alt="Alpha 02 imagen" />
+              <a
+                target="_blank"
+                href="https://github.com/PereAlbertiAguilo/Alpha_02"
+                >Proyecto en Git Hub
+                <i
+                  class="fa-solid fa-arrow-up-right-from-square"
+                  style="color: #ffffff"
+                >
+                </i>
+              </a>
+            </div>
           </div>
           <div class="proyecto">
             <div class="textContainer">
@@ -220,7 +232,19 @@
                 </li>
               </ul>
             </div>
-            <img src="img/memory.jpg" alt="Memory of Legends imagen" />
+            <div class="proyectoImageHolder">
+              <img src="img/memory.jpg" alt="Memory of Legends imagen" />
+              <a
+                target="_blank"
+                href="https://github.com/PereAlbertiAguilo/Memory_2D"
+                >Proyecto en Git Hub
+                <i
+                  class="fa-solid fa-arrow-up-right-from-square"
+                  style="color: #ffffff"
+                >
+                </i>
+              </a>
+            </div>
           </div>
           <div class="proyecto">
             <div class="textContainer">
@@ -253,7 +277,19 @@
                 </li>
               </ul>
             </div>
-            <img src="img/galacticRunner.png" alt="Galactic Runner imagen" />
+            <div class="proyectoImageHolder">
+              <img src="img/galacticRunner.png" alt="Galactic Runner imagen" />
+              <a
+                target="_blank"
+                href="https://github.com/PereAlbertiAguilo/GalacticRunner"
+                >Proyecto en Git Hub
+                <i
+                  class="fa-solid fa-arrow-up-right-from-square"
+                  style="color: #ffffff"
+                >
+                </i>
+              </a>
+            </div>
           </div>
           <div class="proyecto">
             <div class="textContainer">
@@ -284,7 +320,19 @@
                 </li>
               </ul>
             </div>
-            <img src="img/infiniteLands.jpg" alt="Infinite Lands Imagen" />
+            <div class="proyectoImageHolder">
+              <img src="img/infiniteLands.jpg" alt="Infinite Lands Imagen" />
+              <a
+                target="_blank"
+                href="https://github.com/PereAlbertiAguilo/InfiniteLands"
+                >Proyecto en Git Hub
+                <i
+                  class="fa-solid fa-arrow-up-right-from-square"
+                  style="color: #ffffff"
+                >
+                </i>
+              </a>
+            </div>
           </div>
           <div class="proyecto">
             <div class="textContainer">
@@ -315,7 +363,19 @@
                 </li>
               </ul>
             </div>
-            <img src="img/tukiEstudio.PNG" alt="Tuki Estudio imagen" />
+            <div class="proyectoImageHolder">
+              <img src="img/tukiEstudio.PNG" alt="Tuki Estudio imagen" />
+              <a
+                target="_blank"
+                href="https://github.com/PereAlbertiAguilo/Tuki-Estudio"
+                >Proyecto en Git Hub
+                <i
+                  class="fa-solid fa-arrow-up-right-from-square"
+                  style="color: #ffffff"
+                >
+                </i>
+              </a>
+            </div>
           </div>
         </div>
       </div>
