--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
               <a
                 target="_blank"
                 href="https://github.com/PereAlbertiAguilo/Alpha_02"
-                >Proyecto en Git Hub
+                >Git Hub
                 <i
                   class="fa-solid fa-arrow-up-right-from-square"
                   style="color: #ffffff"
@@ -237,7 +237,7 @@
               <a
                 target="_blank"
                 href="https://github.com/PereAlbertiAguilo/Memory_2D"
-                >Proyecto en Git Hub
+                >Git Hub
                 <i
                   class="fa-solid fa-arrow-up-right-from-square"
                   style="color: #ffffff"
@@ -282,7 +282,7 @@
               <a
                 target="_blank"
                 href="https://github.com/PereAlbertiAguilo/GalacticRunner"
-                >Proyecto en Git Hub
+                >Git Hub
                 <i
                   class="fa-solid fa-arrow-up-right-from-square"
                   style="color: #ffffff"
@@ -325,7 +325,7 @@
               <a
                 target="_blank"
                 href="https://github.com/PereAlbertiAguilo/InfiniteLands"
-                >Proyecto en Git Hub
+                >Git Hub
                 <i
                   class="fa-solid fa-arrow-up-right-from-square"
                   style="color: #ffffff"
@@ -368,7 +368,7 @@
               <a
                 target="_blank"
                 href="https://github.com/PereAlbertiAguilo/Tuki-Estudio"
-                >Proyecto en Git Hub
+                >Git Hub
                 <i
                   class="fa-solid fa-arrow-up-right-from-square"
                   style="color: #ffffff"
