--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
         <p><span>Hola,</span> me llamo</p>
         <h1>Pere Albertí Aguiló</h1>
         <h4>
-          Soy un desarrollador de videojuegos usando Unity y C#. Actualmente
-          estoy estudiando Unreal Engine y, admeás, estoy aprendiendo
-          autodidacticamente desarrollo web usando HTML, CSS y Java Script
+          Soy un apasionado desarrollador de videojuegos, especializado en Unity
+          y C#. Actualmente, estoy ampliando mis habilidades explorando Unreal
+          Engine y, además, estoy explorando de manera autodidacta el desarrollo
+          web, mediante el uso de HTML, CSS y JavaScript.
         </h4>
       </div>
     </header>
@@ -74,28 +75,29 @@
         <div class="aboutContent">
           <div class="aboutLeftColumn">
             <p>
-              Hola, me llamo Pere Albertí Aguiló y me apasiona crear juegos y
-              entornos interactivos. Este interés empezó desde muy joven cuando
-              consegui mi primera consola, la Gameboy Advance.
+              Hola! Soy Pere Albertí Aguiló, un apasionado desarrollador de
+              juegos y entornos interactivos. Mi fascinación por este mundo
+              comenzó en mi infancia cuando obtuve mi primera consola, la
+              Gameboy Advance.
             </p>
             <br />
             <span class="horizontalLine left"></span>
             <br />
             <p>
-              Siempre he tomado los caminos que usaban y, o oxpandian mi
-              creatividad. Pasando por clases de dibujo y ilustración,
-              bachillerato artístico y terminando por un grado superior de
-              animación 3D, juegos y entornos interactivos.
+              Siempre he seguido un camino de exploración y expansión de mi
+              creatividad, tomando desde mi juventud clases de dibujo e
+              ilustración hasta completar un grado superior en animación 3D,
+              juegos y entornos interactivos.
             </p>
             <br />
             <span class="horizontalLine left"></span>
             <br />
             <p>
-              Desde que termine el gradu superior he expandido mis conocimentos
-              mediante colaboraciones, prácticas y proyectos personales.
-              También, he encontrado un nuevo interés i atractivo en el
-              desarrollo web, ya que hago uso de la programación para expresar
-              mi creatividad.
+              Tras finalizar mis estudios, he continuado enriqueciendo mis
+              habilidades a través de colaboraciones, prácticas y proyectos
+              personales. Además, he descubierto un nuevo interés y atractivo en
+              el desarrollo web, utilizando la programación como una herramienta
+              para expresar mi creatividad.
             </p>
             <br />
           </div>
@@ -103,7 +105,7 @@
             <img src="img/me.PNG" alt="Imágen de Pere Albertí Aguiló" />
           </div>
           <p>
-            A continuación dejo las tecnologías y habilidades que uso y manejo:
+            A continuación dejo las tecnologías y habilidades que uso y conozco:
           </p>
           <br />
           <br />
@@ -159,8 +161,11 @@
             <div class="textContainer">
               <h2>Alpha 02</h2>
               <h4>
-                Proyecto final del grado superior de videojuegos y ganador del
-                mejor juego del curso. Publicado en
+                Proyecto final del grado superior de videojuegos. Ganador al
+                mejor juego del curso, y recopilación de mi formación. Desde la
+                conceptualización hasta la implementación de mecánicas de juego,
+                cada paso ha sido una lección de aprendizaje y creatividad.
+                Publicado actualmente en
                 <a
                   target="_blank"
                   href="https://pere-alberti-aguilo.itch.io/alpha-02"
@@ -211,8 +216,8 @@
             <div class="textContainer">
               <h2>Memory of Legends</h2>
               <h4>
-                Pequeño proyecto en el que se recrea el clasico juego de cartas
-                "memory"
+                En este proyecto creativo, como trabajo de clase, he recreado el
+                clásico juego de cartas "Memory"
               </h4>
               <ul class="techUsedContainer">
                 <li class="skillItem">
@@ -250,8 +255,9 @@
             <div class="textContainer">
               <h2>Galactic Runner</h2>
               <h4>
-                Juego de mobil con estilo arcade en actual desarrollo. Va ha
-                estar publicado proximamente en
+                Actualmente estoy trabajando en el desarrollo de un emocionante
+                juego para dispositivos móviles con un estilo arcade clásico. Va
+                ha estar publicado proximamente en la
                 <a
                   target="_blank"
                   href="https://pere-alberti-aguilo.itch.io/alpha-02"
@@ -295,8 +301,10 @@
             <div class="textContainer">
               <h2>Infinite Lands</h2>
               <h4>
-                Proyecto en el que exploro la generación procedural de terreno,
-                materiales y animaciones. Dejo aqui un pequeño
+                En este proyecto exploro la generación procedural de terrenos,
+                materiales y animaciones. Creando mundos virtuales llenos de
+                sorpresas y detalles únicos que emergen de algoritmos creativos.
+                Dejo aqui un pequeño
                 <a target="_blank" href="https://youtu.be/WnuLtaBGOt0"
                   >devlog del proyecto
                   <i
@@ -338,8 +346,12 @@
             <div class="textContainer">
               <h2>Tuki Estudio</h2>
               <h4>
-                Página web dedicada a un estudio musical y de grabación que
-                estamos montando un colega y yo.
+                Página web dedicada a un estudio musical y de grabación, Tuki
+                Estudio. Con una pasión compartida por la música y el video, mi
+                colega y ofrecemos un espacio creativo y profesional. Desde la
+                grabación hasta la producción, estamos comprometidos en
+                proporcionar servicios de alta calidad y una experiencia única
+                para nuestros clientes.
                 <a target="_blank" href="https://main--tuki-studio.netlify.app"
                   >Tuki Estudio
                   <i
