--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <h4>
           Soy un apasionado desarrollador de videojuegos, especializado en Unity
           y C#. Actualmente, estoy ampliando mis habilidades explorando Unreal
-          Engine y, además, estoy explorando de manera autodidacta el desarrollo
-          web, mediante el uso de HTML, CSS y JavaScript.
+          Engine y, además, estoy aprendiendo de manera autodidacta el
+          desarrollo web, mediante el uso de HTML, CSS y JavaScript.
         </h4>
       </div>
     </header>
