RRProject/languagesFix/CV

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             data-value="link3"
             >Contacto</a
           >
-          <a target="_blank" href="https://tan-randi-23.tiiny.site"
+          <a target="_blank" href="https://harlequin-norean-17.tiiny.site"
             ><button class="navbarBtn navbarItem">CV</button>
           </a>
         </div>
@@ -91,7 +91,7 @@
             data-value="link3"
             >Contacto</a
           >
-          <a target="_blank" href="https://tan-randi-23.tiiny.site"
+          <a target="_blank" href="https://harlequin-norean-17.tiiny.site"
             ><button class="navbarBtn navbarItem">CV</button>
           </a>
         </div>
@@ -212,6 +212,8 @@
                 conceptualización hasta la implementación de mecánicas de juego,
                 cada paso ha sido una lección de aprendizaje y creatividad.
                 Publicado actualmente en
+              </h4>
+              <span>
                 <a
                   target="_blank"
                   href="https://pere-alberti-aguilo.itch.io/alpha-02"
@@ -221,7 +223,7 @@
                     style="color: #ffffff"
                   ></i
                 ></a>
-              </h4>
+              </span>
               <ul class="techUsedContainer">
                 <li class="skillItem">
                   <i class="fa-brands fa-unity" style="color: #ffffff"></i>
@@ -249,6 +251,143 @@
               <a
                 target="_blank"
                 href="https://github.com/PereAlbertiAguilo/Alpha_02"
+                >Git Hub
+                <i
+                  class="fa-solid fa-arrow-up-right-from-square"
+                  style="color: #ffffff"
+                >
+                </i>
+              </a>
+            </div>
+          </div>
+          <div class="proyecto">
+            <div class="textContainer">
+              <h2>Realta Raetha</h2>
+              <h4 data-section="projects" data-value="porjectText6">
+                Prototipo de un videojuego de estilo metroidvania en 2D con
+                mecánicas inspiradas en Hollow Knight y un diseño visual en
+                pixel art. En este proyecto, experimento con custom inspectors,
+                algoritmo A* pathfinder para la IA de los enemigos, además de
+                implementar un sistema de guardado utilizando JSON y
+                encriptación.
+              </h4>
+              <ul class="techUsedContainer">
+                <li class="skillItem">
+                  <i class="fa-brands fa-unity" style="color: #ffffff"></i>
+                  <p>Unity</p>
+                </li>
+                <li class="skillItem">
+                  <i class="fa-solid fa-code" style="color: #ffffff"></i>
+                  <p>C#</p>
+                </li>
+                <li class="skillItem">
+                  <i class="fa-solid fa-palette" style="color: #ffffff"></i>
+                  <p>Aseprite</p>
+                </li>
+              </ul>
+            </div>
+            <div class="proyectoImageHolder">
+              <img src="img/RealthaRaetha.png" alt="Tuki Estudio imagen" />
+              <a
+                target="_blank"
+                href="https://github.com/PereAlbertiAguilo/RealtaRaetha"
+                >Git Hub
+                <i
+                  class="fa-solid fa-arrow-up-right-from-square"
+                  style="color: #ffffff"
+                >
+                </i>
+              </a>
+            </div>
+          </div>
+          <div class="proyecto">
+            <div class="textContainer">
+              <h2>Tuki Estudio</h2>
+              <h4 data-section="projects" data-value="porjectText5">
+                Página web dedicada a un estudio musical y de grabación, Tuki
+                Estudio. Con una pasión compartida por la música y el video, mi
+                colega y ofrecemos un espacio creativo y profesional. Desde la
+                grabación hasta la producción, estamos comprometidos en
+                proporcionar servicios de alta calidad y una experiencia única
+                para nuestros clientes.
+              </h4>
+              <span>
+                <a target="_blank" href="https://main--tuki-studio.netlify.app"
+                  >Tuki Estudio
+                  <i
+                    class="fa-solid fa-arrow-up-right-from-square"
+                    style="color: #ffffff"
+                  ></i
+                ></a>
+              </span>
+              <ul class="techUsedContainer">
+                <li class="skillItem">
+                  <i class="fa-brands fa-html5" style="color: #ffffff"></i>
+                  <p>HTML</p>
+                </li>
+                <li class="skillItem">
+                  <i class="fa-brands fa-css3-alt" style="color: #ffffff"></i>
+                  <p>CSS</p>
+                </li>
+                <li class="skillItem">
+                  <i class="fa-brands fa-square-js" style="color: #ffffff"></i>
+                  <p>Java Script</p>
+                </li>
+              </ul>
+            </div>
+            <div class="proyectoImageHolder">
+              <img src="img/tukiEstudio.PNG" alt="Tuki Estudio imagen" />
+              <a
+                target="_blank"
+                href="https://github.com/PereAlbertiAguilo/Tuki-Estudio"
+                >Git Hub
+                <i
+                  class="fa-solid fa-arrow-up-right-from-square"
+                  style="color: #ffffff"
+                >
+                </i>
+              </a>
+            </div>
+          </div>
+          <div class="proyecto">
+            <div class="textContainer">
+              <h2>Galactic Runner</h2>
+              <h4 data-section="projects" data-value="porjectText3">
+                Actualmente estoy trabajando en el desarrollo de un emocionante
+                juego para dispositivos móviles con un estilo arcade clásico. Va
+                ha estar publicado proximamente en la
+              </h4>
+              <span>
+                <a
+                  target="_blank"
+                  href="https://pere-alberti-aguilo.itch.io/alpha-02"
+                  >Play Store
+                  <i
+                    class="fa-solid fa-arrow-up-right-from-square"
+                    style="color: #ffffff"
+                  ></i
+                ></a>
+              </span>
+              <ul class="techUsedContainer">
+                <li class="skillItem">
+                  <i class="fa-brands fa-unity" style="color: #ffffff"></i>
+                  <p>Unity</p>
+                </li>
+                <li class="skillItem">
+                  <i class="fa-solid fa-code" style="color: #ffffff"></i>
+                  <p>C#</p>
+                </li>
+                <li class="skillItem">
+                  <i class="fa-solid fa-palette" style="color: #ffffff"></i>
+                  <p>Aseprite</p>
+                </li>
+              </ul>
+            </div>
+            <div class="proyectoImageHolder">
+              <img src="img/galacticRunner.png" alt="Galactic Runner imagen" />
+              <a
+                target="_blank"
+                href="https://github.com/PereAlbertiAguilo/GalacticRunner"
                 >Git Hub
                 <i
                   class="fa-solid fa-arrow-up-right-from-square"
@@ -297,52 +436,7 @@
               </a>
             </div>
           </div>
-          <div class="proyecto">
-            <div class="textContainer">
-              <h2>Galactic Runner</h2>
-              <h4 data-section="projects" data-value="porjectText3">
-                Actualmente estoy trabajando en el desarrollo de un emocionante
-                juego para dispositivos móviles con un estilo arcade clásico. Va
-                ha estar publicado proximamente en la
-                <a
-                  target="_blank"
-                  href="https://pere-alberti-aguilo.itch.io/alpha-02"
-                  >Play Store
-                  <i
-                    class="fa-solid fa-arrow-up-right-from-square"
-                    style="color: #ffffff"
-                  ></i
-                ></a>
-              </h4>
-              <ul class="techUsedContainer">
-                <li class="skillItem">
-                  <i class="fa-brands fa-unity" style="color: #ffffff"></i>
-                  <p>Unity</p>
-                </li>
-                <li class="skillItem">
-                  <i class="fa-solid fa-code" style="color: #ffffff"></i>
-                  <p>C#</p>
-                </li>
-                <li class="skillItem">
-                  <i class="fa-solid fa-palette" style="color: #ffffff"></i>
-                  <p>Aseprite</p>
-                </li>
-              </ul>
-            </div>
-            <div class="proyectoImageHolder">
-              <img src="img/galacticRunner.png" alt="Galactic Runner imagen" />
-              <a
-                target="_blank"
-                href="https://github.com/PereAlbertiAguilo/GalacticRunner"
-                >Git Hub
-                <i
-                  class="fa-solid fa-arrow-up-right-from-square"
-                  style="color: #ffffff"
-                >
-                </i>
-              </a>
-            </div>
-          </div>
+
           <div class="proyecto">
             <div class="textContainer">
               <h2>Infinite Lands</h2>
@@ -351,6 +445,8 @@
                 materiales y animaciones. Creando mundos virtuales llenos de
                 sorpresas y detalles únicos que emergen de algoritmos creativos.
                 Dejo aqui un pequeño
+              </h4>
+              <span>
                 <a target="_blank" href="https://youtu.be/WnuLtaBGOt0"
                   >devlog
                   <i
@@ -358,7 +454,7 @@
                     style="color: #ffffff"
                   ></i
                 ></a>
-              </h4>
+              </span>
               <ul class="techUsedContainer">
                 <li class="skillItem">
                   <i class="fa-brands fa-unity" style="color: #ffffff"></i>
@@ -379,53 +475,6 @@
               <a
                 target="_blank"
                 href="https://github.com/PereAlbertiAguilo/InfiniteLands"
-                >Git Hub
-                <i
-                  class="fa-solid fa-arrow-up-right-from-square"
-                  style="color: #ffffff"
-                >
-                </i>
-              </a>
-            </div>
-          </div>
-          <div class="proyecto">
-            <div class="textContainer">
-              <h2>Tuki Estudio</h2>
-              <h4 data-section="projects" data-value="porjectText5">
-                Página web dedicada a un estudio musical y de grabación, Tuki
-                Estudio. Con una pasión compartida por la música y el video, mi
-                colega y ofrecemos un espacio creativo y profesional. Desde la
-                grabación hasta la producción, estamos comprometidos en
-                proporcionar servicios de alta calidad y una experiencia única
-                para nuestros clientes.
-                <a target="_blank" href="https://main--tuki-studio.netlify.app"
-                  >Tuki Estudio
-                  <i
-                    class="fa-solid fa-arrow-up-right-from-square"
-                    style="color: #ffffff"
-                  ></i
-                ></a>
-              </h4>
-              <ul class="techUsedContainer">
-                <li class="skillItem">
-                  <i class="fa-brands fa-html5" style="color: #ffffff"></i>
-                  <p>HTML</p>
-                </li>
-                <li class="skillItem">
-                  <i class="fa-brands fa-css3-alt" style="color: #ffffff"></i>
-                  <p>CSS</p>
-                </li>
-                <li class="skillItem">
-                  <i class="fa-brands fa-square-js" style="color: #ffffff"></i>
-                  <p>Java Script</p>
-                </li>
-              </ul>
-            </div>
-            <div class="proyectoImageHolder">
-              <img src="img/tukiEstudio.PNG" alt="Tuki Estudio imagen" />
-              <a
-                target="_blank"
-                href="https://github.com/PereAlbertiAguilo/Tuki-Estudio"
                 >Git Hub
                 <i
                   class="fa-solid fa-arrow-up-right-from-square"
